# ai-app-builder

./: .gitignore  CHECKPOINT.md  SESSION.md  index.html  package-lock.json  package.json  tailwind.config.js  update-memory.md  updater.json
scripts/: generate-builtin-skills.ps1  generate-icons.ps1  generate-icons.py  (+2 more)
src/: App.tsx  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/resources/skills/: agent-creator.md  algorithmic-art.md  audio-instrument-remover.md  audio-transcriber.md  brainstorming.md  brand-guidelines.md  canvas-design.md  claude-api.md  claude-automation-recommender.md  claude-md-improver.md  copywriting.md  dispatching-parallel-agents.md  doc-coauthoring.md  doc-to-pdf.md  docx.md  example-plugin.md  executing-plans.md  figma-code-connect.md  figma-create-design-system-rules.md  figma-create-new-file.md  figma-generate-design.md  figma-generate-diagram.md  figma-generate-library.md  figma-implement-design.md  figma-use-figjam.md  figma-use.md  finishing-a-development-branch.md  frontend-design.md  generate-project-plan.md  impeccable.md  intake-strategist.md  internal-comms.md  marketing-strategist.md  mcp-builder.md  music-extractor.md  opensquad-copywriting.md  opensquad-image-design.md  opensquad-instagram-feed.md  opensquad-sherlock-instagram.md  opensquad-social-networks-publishing.md  (+23 more)
src-tauri/src/: lib.rs  main.rs  skills_data.rs
src-tauri/src/commands/: ai.rs  filesystem.rs  git.rs  llm_gateway.rs  mod.rs  runner.rs  sidecar.rs  skills.rs  terminal.rs  updater.rs
(+116 files in other folders)
