[package]
name = "ai-app-builder"
version = "0.1.52"
description = "AI App Builder Studio - Desktop app for building software via natural language"
authors = ["Fluxcodex"]
edition = "2021"

[lib]
name = "ai_app_builder_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "ai-app-builder"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "blocking"] }
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
